# binding

./: README.md  pyproject.toml  readme.py  setup.py  spike_curse.py
.github/workflows/: python-publish.yml
binding/: __init__.py  binding.py
test/: test_binding_properties.py  test_converters.py  test_getters_setters.py  test_nesting.py  test_other_properties.py  test_propagation.py  test_types.py
