[tool.poetry]
name = "binding"
version = "0.1.0"
description = "Bindable properties for Python"
authors = ["Zauberzeug GmbH <info@zauberzeug.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zauberzeug/binding"
keywords = ["bind", "properties", "ui", "automatic", "values"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
